--- a/index.html
+++ b/index.html
@@ -17,210 +17,20 @@
 
     <div class="content">
         <p class="title blinking" onclick="selectTitle()">Marwan Bassam</p>
-        
         <nav class="navbar">
             <a href="">About Me</a>
             <a href="">Skills</a>
             <a href="">Experience</a>
             <a href="">Contact Me</a>
         </nav>
-
     </div>
 
-
-    <div id="stars-container">
-        <div class="stars1">
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-            <div class="star star1"></div>
-        </div>
-
-        <div class="stars2">
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-            <div class="star star2"></div>
-        </div>
-
-        <div class="stars3">
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-            <div class="star star3"></div>
-        </div>
-
-    </div>
+    <div id="stars-container"></div>
+    
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="jquery.js"></script>
 <script src="index.js"></script>
 
 </html>
