--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marwan Bassam</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">
@@ -17,10 +17,10 @@
     <div class="content">
         <p class="title blinking" onclick="selectTitle()">Marwan Bassam</p>
         <nav class="navbar">
-            <a href="">About Me</a>
-            <a href="">Skills</a>
-            <a href="">Experience</a>
-            <a href="">Contact Me</a>
+            <a href="#">About Me</a>
+            <a href="#">Skills</a>
+            <a href="#">Experience</a>
+            <a href="#">Contact Me</a>
         </nav>
     </div>
     
