Add about me page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <p class="title blinking" onclick="selectTitle()">Marwan Bassam</p>
         <nav class="navbar">
-            <a href="#">About Me</a>
+            <a href="./about.html">About Me</a>
             <a href="#">Skills</a>
             <a href="#">Experience</a>
             <a href="#">Contact Me</a>
