--- a/home.html
+++ b/home.html
@@ -7,23 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marwan Bassam</title>
     <link rel="stylesheet" href="./styles/home.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./styles/star.css">
     <script src="./js/home.js"></script>
 </head>
 
 <body>
-
-    <div class="content">
-        <p class="title blinking" onclick="selectTitle()">Marwan Bassam</p>
-        <nav class="navbar">
-            <a href="./about.html">About Me</a>
-            <a href="#">Skills</a>
-            <a href="#">Experience</a>
-            <a href="#">Contact Me</a>
-        </nav>
-    </div>
-
     <div id="stars-container"></div>
+
+    <h1 id="title" class="blinking">Marwan Bassam</h1>
+
+    <div id="hyperjump"></div>
 
 </body>
 
