--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="home.html" id="back-btn">Back to Home</a>
+        <a href="index.html" id="back-btn">Back to Home</a>
     </header>
 
     <div id="avatar">
